# TeamNG

./: .gitignore  =22.0.0  README.md  pyproject.toml  requirements.txt
T/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
project_manager/: admin.py  backends.py  email_utils.py  forms.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py  views_admin.py  views_api.py  views_manager.py
project_manager/api/: serializers.py  urls.py  views.py
project_manager/templates/project_manager/: 404.html  dashboard.html  login.html  notifications.html
project_manager/templates/project_manager/auth/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_sent.html
project_manager/templates/project_manager/emails/: notification_email.html  notification_email_recieve_admin.html  notification_email_recieve_manager.html  sign_up_email.html
project_manager/templates/project_manager/main_pages/: activity_log.html  add_leave.html  delete_entry.html  delete_leave.html  leave_log.html  registerhours.html  update_entry.html  update_leave.html
project_manager/templates/project_manager/profile/: profile.html  upload_profile_img.html
project_manager/tests/: test_views.py
static/css/: bootstrap.min.css  sb-admin-2.css
static/js/: addleave.js  calendar.js  create_holiday.js  notifications.js  registerpage.js  user_overview.js
static/js/admin/: overview.js
static/js/manager/: overview_manager.js
static/js/reports/: report_user.js
static/style/: addleave.css  login.css  main.css
staticfiles/css/: bootstrap-datepicker.css  sb-admin-2.css  sb-admin-2.min.css
staticfiles/js/: activitylog.js  addleave.js  calendar.js  notifications.js  registerpage.js  sb-admin-2.min.js  toast.js  upload_img.js  user_overview.js
staticfiles/js/admin/: overview.js
staticfiles/js/manager/: overview_manager.js
staticfiles/style/: login.css  main.css
templates/: base.html  nav.html  sidebar.html
(+80 files in other folders)
