[tool.poetry]
name = "t"
version = "0.1.0"
description = ""
authors = ["munjed-ab <abazamunged@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosmtplib = "3.0.1"
amqp = "5.2.0"
anyio = "4.3.0"
asgiref = "3.7.2"
billiard = "4.2.0"
celery = "5.3.6"
cerberus = "1.3.5"
certifi = "2024.2.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cron-descriptor = "1.4.3"
django = "5.0.4"
django-celery-beat = "2.6.0"
django-celery-results = "2.5.1"
django-timezone-field = "6.1.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
kombu = "5.3.7"
msgpack = "1.0.8"
numpy = "1.26.4"
pandas = "2.2.1"
pillow = "10.3.0"
prompt-toolkit = "3.0.43"
psycopg = "3.1.18"
psycopg2 = "2.9.9"
python-crontab = "3.0.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
redis = "5.0.3"
six = "1.16.0"
sniffio = "1.3.1"
sqlparse = "0.5.0"
toolz = "0.12.1"
typing-extensions = "4.9.0"
tzdata = "2024.1"
ulid-py = "1.1.0"
vine = "5.1.0"
wcwidth = "0.2.13"
build = "1.2.1"
cachecontrol = "0.14.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.8"
djangorestframework = "3.15.1"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.2.0"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.1"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pyproject-hooks = "1.1.0"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.9.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomlkit = "0.12.5"
trove-classifiers = "2024.4.10"
urllib3 = "2.2.1"
virtualenv = "20.26.1"
kolo = "2.21.1"
gunicorn = "22.0.0"
requests = "2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
